feat: reset security configuration unauthenticated endpoints